# -*- coding: utf-8 -*-

2010-02-23  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Fix `gem unpack`.  Bug #27872 by Timothy
	  Jones.
	* lib, test:  Import changes from ruby trunk.

2010-02-20  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  1.3.6.
	* test/*:  Windows test fixes
	* lib/rubygems/remote_fetcher.rb:  Fix same file detection on windows.

2010-02-15  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/config_file.rb:  Fix use of ConfigFile#api_key= vs
	  #rubygems_api_key=.  Patch by Nick Quaranto.

2010-02-12  Eric Hodel  <drbrain@segment7.net>

	* Rakefile:  RubyGems doesn't depend on previous RubyGems.

2010-02-11  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  http://rubygems.org is now the default source.
	* lib/rubygems/dependency.rb:  Only warn once about
	  #version_requirement

2010-02-09  Eric Hodel  <drbrain@segment7.net>

	* bin/update_rubygems:  Use system, exec more correctly, remove
	  useless puts.
	* lib/rubygems/commands/query_command.rb:  List every version when
	  --prerelease --all is given.

2010-02-08  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/dependency_command.rb:  Support --prerelease.
	* lib/rubygems/commands/fetch_command.rb:  Support --prerelease.
	* lib/rubygems/format.rb:  Don't crash on empty files.  Bug #27292 by
	  Ian Ragsdale.
	* lib/rubygems/server.rb:  Fix markup.  Bug #27045 by Eric Young.
	* History.txt:  RubyGems 1.3.6 release notes.

2010-02-07  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb:  Allow prerelease gems to
	  depend on non-prerelease gems.

2010-02-06  Eric Hodel  <drbrain@segment7.net>

	* test/test_gem_commands_specification_command.rb:  Don't enforce YAML
	  format.  Patch #27791 by Aaron Patterson.
	* lib/rubygems/version.rb:  Allow captial letters in prerelease
	  versions.
	* lib/rubygems/config_file.rb:  Explain format of ~/.gemrc.  Bug
	  #27698 by J Smith.