@@ -134,5 +134,16 @@ class TestGemDependency < RubyGemTestCase
     assert d.prerelease?
   end
 
+  def test_version_requirements_equals_deprecated
+    d = dep "pkg", "1.0"
+
+    out, err = capture_io do
+      d.version_requirements = '2.0'
+      assert_equal Gem::Requirement.new(%w[2.0]), d.requirement
+    end
+
+    assert_match %r%deprecated%, err
+  end
+
 end
 
